# websocket-rs

./: Cargo.toml  README.md  pyproject.toml
src/: async_client.rs
websocket_rs/: __init__.py
